[gd_scene load_steps=16 format=2]

[ext_resource path="res://data/scripts/player/Character.gd" type="Script" id=1]
[ext_resource path="res://data/assets/efx/shadow/shadow.png" type="Texture" id=2]
[ext_resource path="res://data/scripts/items/weapon/Weapon.gd" type="Script" id=3]
[ext_resource path="res://data/scenes/camera/Camera.tscn" type="PackedScene" id=4]
[ext_resource path="res://data/scripts/camera/Camera.gd" type="Script" id=5]
[ext_resource path="res://data/scenes/ui/ingame/IngameUI.tscn" type="PackedScene" id=6]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [  ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [  ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [  ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [  ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [  ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=6]
animations = [ {
"frames": [  ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=7]

[sub_resource type="CircleShape2D" id=8]

[sub_resource type="CircleShape2D" id=9]

[node name="Character" type="KinematicBody2D"]
collision_mask = 2
script = ExtResource( 1 )

[node name="YSort" type="YSort" parent="."]
use_parent_material = true

[node name="Body" type="AnimatedSprite" parent="YSort"]
use_parent_material = true
frames = SubResource( 1 )
offset = Vector2( 0, -11 )

[node name="Legs" type="AnimatedSprite" parent="YSort"]
frames = SubResource( 2 )
offset = Vector2( 0, -11 )

[node name="Weapon" type="AnimatedSprite" parent="YSort"]
position = Vector2( 0, -14 )
frames = SubResource( 3 )
script = ExtResource( 3 )

[node name="Right_hand" type="AnimatedSprite" parent="YSort/Weapon"]
frames = SubResource( 4 )

[node name="Ring" type="AnimatedSprite" parent="YSort/Weapon"]
frames = SubResource( 5 )

[node name="Left_hand" type="AnimatedSprite" parent="YSort/Weapon"]
frames = SubResource( 6 )

[node name="Collision_walk" type="CollisionShape2D" parent="."]
visible = false
scale = Vector2( 0.6, 0.4 )
shape = SubResource( 7 )

[node name="Close_interactions" type="Area2D" parent="."]

[node name="Collision_area" type="CollisionShape2D" parent="Close_interactions"]
scale = Vector2( 0.8, 0.6 )
shape = SubResource( 8 )

[node name="Long_interactions" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Long_interactions"]
scale = Vector2( 1.6, 1.2 )
shape = SubResource( 9 )

[node name="Sprite" type="Sprite" parent="."]
show_behind_parent = true
position = Vector2( 0, -4 )
texture = ExtResource( 2 )

[node name="Attack_timer" type="Timer" parent="."]

[node name="Stamina_regen" type="Timer" parent="."]

[node name="Camera" parent="." instance=ExtResource( 4 )]
current = false
script = ExtResource( 5 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="IngameUI" parent="CanvasLayer" instance=ExtResource( 6 )]

[connection signal="area_entered" from="Close_interactions" to="." method="_on_Collision_interacitons_area_entered"]
[connection signal="area_entered" from="Long_interactions" to="." method="_on_Interactions_area_entered"]
[connection signal="area_exited" from="Long_interactions" to="." method="_on_Interactions_area_exited"]
[connection signal="timeout" from="Attack_timer" to="." method="_on_Attack_timer_timeout"]
[connection signal="timeout" from="Stamina_regen" to="." method="_on_Stamina_regen_timeout"]
